--- a/shop-smart-app/src/pages/SignInPage.css
+++ b/shop-smart-app/src/pages/SignInPage.css
@@ -17,11 +17,12 @@
   gap: 12px;
 }
 
-.form-input {
+.form-input-signin {
   border: 1px solid #ccc;
   padding: 10px;
   border-radius: 6px;
   font-size: 16px;
+  width: auto;
 }
 
 .form-button {
