--- a/shop-smart-app/src/pages/AboutPage.css
+++ b/shop-smart-app/src/pages/AboutPage.css
@@ -1,18 +1,36 @@
-.about-page {
+.about-top-section {
   max-width: 600px;
   margin: 40px auto;
   padding: 0 20px;
+  justify-items: center;
 }
 
 .about-title {
-  font-size: 24px;
   margin-bottom: 16px;
   color: #3e67d6;
 }
 
 .about-text {
-  font-size: 16px;
-  color: #333;
-  line-height: 1.6;
   margin-bottom: 10px;
 }
+
+.about-box-section {
+  display: flex;
+  gap: 20px;
+  margin: 0px 30px 60px 30px;
+}
+
+.section-title {
+  font-size: 24px;
+  margin-bottom: 16px;
+  color: #3e67d6;
+}
+
+.section-picture {
+  width: 50vw;
+}
+
+img {
+  width: -webkit-fill-available;
+}
+
