--- a/shop-smart-app/src/pages/HomePage.css
+++ b/shop-smart-app/src/pages/HomePage.css
@@ -1,18 +1,26 @@
 .home-page {
-  max-width: 600px;
-  margin: 40px auto;
-  text-align: center;
-  padding: 0 20px;
+  display: flex;
+  
 }
 
-.home-title {
-  font-size: 24px;
-  color: #3e67d6;
-  margin-bottom: 12px;
+.main-column {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  padding: 5px;
 }
 
-.home-text {
-  font-size: 16px;
-  color: #333;
-  margin: 0;
+.store-cards {
+  padding: 5px;
+  display: flex;
+  width: 70%;
+  flex-wrap: wrap;
+}
+
+.new-store-button {
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  width: 50px;
+  height: 50px;
 }
