--- a/shop-smart-app/src/components/custom-inputs/item-search.css
+++ b/shop-smart-app/src/components/custom-inputs/item-search.css
@@ -1,7 +1,7 @@
 .add-item {
     margin-top: 10px;
     padding: 10px;
-    width: 100%;
+    flex-grow: 1;
     display: flex;
     justify-content: center;
     border-radius: 10px;
