--- a/shop-smart-app/src/components/store-cards/store-card.css
+++ b/shop-smart-app/src/components/store-cards/store-card.css
@@ -1,11 +1,11 @@
 .store-card {
-    padding: 10px 5px 5px 5px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     border: 1px solid black;
     border-radius: 10px;
-    margin: 10px;
     min-width: 300px;
+    max-height: fit-content;
 }
 
 .store-name {
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* height: auto; */
 }
 
 .unassigned-card {
