--- a/shop-smart-app/src/pages/HomePage.css
+++ b/shop-smart-app/src/pages/HomePage.css
@@ -1,12 +1,14 @@
 .home-page {
   display: flex;
-  
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
 }
 
 .main-column {
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 25%;
   padding: 5px;
 }
 
@@ -14,6 +16,7 @@
   padding: 5px;
   display: flex;
   width: 70%;
+  gap: 20px;
   flex-wrap: wrap;
 }
 
@@ -23,4 +26,12 @@
   right: 50px;
   width: 50px;
   height: 50px;
+}
+
+.new-store-form {
+
+}
+
+.store-name-input {
+
 }
