--- a/shop-smart-app/src/components/modals/base-modal.css
+++ b/shop-smart-app/src/components/modals/base-modal.css
@@ -8,7 +8,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 999;
 }
 
 .modal-content {
@@ -17,10 +16,14 @@
     border-radius: 10px;
     box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
     position: relative;
-    z-index: 1000 !important;
-    width: 50%;
-    height: 50%;
+    width: 400px;
+    height: 200px;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 .modal-close-button {
