--- a/shop-smart-app/src/components/store-cards/store-card.css
+++ b/shop-smart-app/src/components/store-cards/store-card.css
@@ -13,10 +13,10 @@
 }
 
 .store-items-wrapper {
-    padding: 5px;
+    /* padding: 5px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
     /* height: auto; */
 }
 
