--- a/shop-smart-app/src/pages/HomePage.css
+++ b/shop-smart-app/src/pages/HomePage.css
@@ -18,6 +18,7 @@
   width: 70%;
   gap: 20px;
   flex-wrap: wrap;
+  max-height: min-content;
 }
 
 .new-store-button {
@@ -29,9 +30,13 @@
 }
 
 .new-store-form {
-
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  border-radius: 10px;
 }
 
 .store-name-input {
-
+  /* width: 100%; */
+  padding: 10px;
 }
