--- a/shop-smart-app/src/pages/ShoppingPage.css
+++ b/shop-smart-app/src/pages/ShoppingPage.css
@@ -1,7 +1,8 @@
 .shopping-page {
-  max-width: 600px;
-  margin: 60px auto;
-  padding: 20px;
+  width: 100%;
+  height: 100%;
+  /* margin: 60px auto; */
+  /* padding: 20px; */
 }
 
 .shopping-title {
@@ -16,4 +17,24 @@
   color: #333;
   line-height: 1.6;
   text-align: center;
+}
+
+.new-trip-page {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.new-trip-form {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 50%;
+  padding: 20px;
+}
+
+.new-trip-title {
+  width: 100%;
 }
