--- a/shop-smart-app/src/pages/ShoppingPage.css
+++ b/shop-smart-app/src/pages/ShoppingPage.css
@@ -3,6 +3,9 @@
   height: 100%;
   /* margin: 60px auto; */
   /* padding: 20px; */
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .shopping-title {
@@ -37,4 +40,12 @@
 
 .new-trip-title {
   width: 100%;
+}
+
+.end-trip-button {
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  width: 150px;
+  height: 50px;
 }
