--- a/shop-smart-app/src/components/Navbar.css
+++ b/shop-smart-app/src/components/Navbar.css
@@ -39,3 +39,18 @@
 .navbar-link:hover {
   opacity: 0.8;
 }
+
+.logout-btn {
+  background: none;
+  border: none;
+  font-weight:600; 
+  color: rgb(243, 70, 70);
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.navbar-user {
+  margin-left: 70vw;
+  color: #ffffff;
+  font-size: 16px;
+}
