--- a/shop-smart-app/src/pages/AboutPage.css
+++ b/shop-smart-app/src/pages/AboutPage.css
@@ -1,7 +1,6 @@
 .about-top-section {
   max-width: 600px;
-  margin: 40px auto;
-  padding: 0 20px;
+  margin: 50px auto;
   justify-items: center;
 }
 
@@ -11,13 +10,13 @@
 }
 
 .about-text {
-  margin-bottom: 10px;
+  margin-bottom: 5vw;
 }
 
 .about-box-section {
   display: flex;
   gap: 20px;
-  margin: 0px 30px 60px 30px;
+  margin: 0px 20vw 5vw 20vw;
 }
 
 .section-title {
@@ -27,10 +26,11 @@
 }
 
 .section-picture {
-  width: 50vw;
+  width:23vw;
 }
 
 img {
   width: -webkit-fill-available;
+  border-radius: 6px;
 }
 
