--- a/shop-smart-app/src/pages/LandingPage.css
+++ b/shop-smart-app/src/pages/LandingPage.css
@@ -52,6 +52,11 @@
   gap: 20px;
 }
 
+.feature-title {
+  text-align: center;
+  color: #3457b2;
+}
+
 .feature-frame {
   border: 1px solid #ccc;
   border-radius: 6px;
@@ -62,15 +67,17 @@
 }
 
 .item-image {
-  width: 100px;
-  height: 100px;
-  margin: 30px;
+  margin:15px;
+  height: 200px;
+  border-radius: 6px;
 }
 
 .feature-paragraph {
   font-size: 18px;
   color: #333;
   padding: 10px;
+  margin:0px;
+  font-size: 16px;
 }
 
 .learn-div {
