--- a/shop-smart-app/src/components/custom-inputs/item-search.css
+++ b/shop-smart-app/src/components/custom-inputs/item-search.css
@@ -1,13 +1,30 @@
 .add-item {
     margin-top: 10px;
-    padding: 10px;
-    flex-grow: 1;
     display: flex;
+    flex-grow: 1;
     justify-content: center;
     border-radius: 10px;
 }
 
+.add-item-button {
+    border-radius: 0px 10px 10px 0px;
+    border: 1px solid black;
+    padding: 20px;
+    font-size: large;
+    color: white;
+    background-color: #3e67d6;
+    transition: background-color 0.1s ease, box-shadow 0.1s ease;
+}
+
+.add-item-button:active {
+    background-color: #2756d9;
+    box-shadow: inset 0 2px 4px rgba(0,0,0,0.3);
+}
+
 .item-name-input {
-    width: 100%;
-    padding: 10px;
+    font-size: medium;
+    flex-grow: 1;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 10px 0px 0px 10px;
 }
