--- a/shop-smart-app/src/components/item-cards/item-cards.css
+++ b/shop-smart-app/src/components/item-cards/item-cards.css
@@ -30,5 +30,10 @@
 }
 
 .check-item-button {
-    
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    color: white;
+    border: 1px solid black;
+    transition: background-color 0.1s ease, box-shadow 0.1s ease;
 }
