--- a/shop-smart-app/src/components/trip-components/trip-picker-card.css
+++ b/shop-smart-app/src/components/trip-components/trip-picker-card.css
@@ -11,10 +11,27 @@
 }
 
 .trip-picker-label {
-    
+
+}
+
+.items-count {
+    display: flex;
+    flex-grow: 1;
+    justify-content: end;
+    padding-right: 20px;
 }
 
 .select-trip-button {
     width: 30px;
     height: 30px;
+    border-radius: 10px;
+    color: white;
+    background-color: #3e67d6;
+    border: 1px solid black;
+    transition: background-color 0.1s ease, box-shadow 0.1s ease;
+}
+
+.select-trip-button:active {
+  background-color: #2756d9;
+  box-shadow: inset 0 2px 4px rgba(0,0,0,0.3);
 }
