--- a/shop-smart-app/src/pages/ShoppingPage.css
+++ b/shop-smart-app/src/pages/ShoppingPage.css
@@ -1,8 +1,6 @@
 .shopping-page {
   width: 100%;
   height: 100%;
-  /* margin: 60px auto; */
-  /* padding: 20px; */
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -33,13 +31,15 @@
 .new-trip-form {
   display: flex;
   flex-direction: column;
-  width: 50%;
-  height: 50%;
+  width: 40%;
+  height: 40%;
   padding: 20px;
 }
 
 .new-trip-title {
   width: 100%;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 .end-trip-button {
@@ -48,4 +48,15 @@
   right: 50px;
   width: 150px;
   height: 50px;
+  color: white;
+  font-size: large;
+  border-radius: 10px;
+  border: 1px solid black;
+  background-color: #3e67d6;
+  transition: background-color 0.1s ease, box-shadow 0.1s ease;
+}
+
+.end-trip-button:active {
+  background-color: #2756d9;
+  box-shadow: inset 0 2px 4px rgba(0,0,0,0.3);
 }
