--- a/shop-smart-app/src/components/Footer.css
+++ b/shop-smart-app/src/components/Footer.css
@@ -2,7 +2,7 @@
   background-color: #f4f4f4;
   padding: 20px;
   text-align: center;
-  margin-top: 40px;
+  /* margin-top: 40px; */
 }
 
 .footer-text {
