--- a/shop-smart-app/src/components/store-cards/store-card.css
+++ b/shop-smart-app/src/components/store-cards/store-card.css
@@ -5,7 +5,6 @@
     border: 1px solid black;
     border-radius: 10px;
     min-width: 300px;
-    max-height: fit-content;
 }
 
 .store-name {
@@ -18,9 +17,15 @@
     flex-direction: column;
     align-items: center; */
     /* height: auto; */
+    /* min-height: fit-content; */
+    /* height: fit-content; */
+    max-height: 30vh;
+    overflow: scroll;
 }
 
 .unassigned-card {
+    max-height: 80vh;
+    overflow: scroll;
     width: 100%;
     padding: 10px;
     border: 1px solid black;
