--- a/shop-smart-app/src/pages/HomePage.css
+++ b/shop-smart-app/src/pages/HomePage.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .main-column {
@@ -18,7 +19,9 @@
   width: 70%;
   gap: 20px;
   flex-wrap: wrap;
-  max-height: min-content;
+  max-height: 87vh;
+  overflow: scroll;
+  align-items: flex-start;
 }
 
 .new-store-button {
