--- a/shop-smart-app/src/pages/ShoppingPage.css
+++ b/shop-smart-app/src/pages/ShoppingPage.css
@@ -3,6 +3,7 @@
   height: 100%;
   display: flex;
   flex-wrap: wrap;
+  align-items: flex-start;
   gap: 20px;
 }
 
@@ -36,10 +37,16 @@
   padding: 20px;
 }
 
+.new-trip-options {
+  max-height: 50vh;
+  overflow: scroll;
+  padding: 0 20px;
+}
+
 .new-trip-title {
   width: 100%;
   text-align: center;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 
 .end-trip-button {
