--- a/shop-smart-app/src/pages/ShoppingPage.css
+++ b/shop-smart-app/src/pages/ShoppingPage.css
@@ -3,8 +3,9 @@
   height: 100%;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   align-items: flex-start;
-  gap: 20px;
+  gap: 40px;
 }
 
 .shopping-title {
